Update classes to use ReadOnlyFilterDetails